# darshak

./: .gitignore  ;  Makefile  README.md  darshak  darshak.py  opengl.py  pdfviewer.py  pyinstaller_build.py  pyproject.toml  requirements.txt  setup.py  threadedRender.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml  python-mac.yml  python-publish.yml  python-ubuntu.yml  python-windows.yml
darshak/: __init__.py  __main__.py  annotate.py  darshak.py  fixedARLabel.py  threadedRender.py  viewer.py
hooks/: hook-popplerqt5.py
src/: __init__.py  darshak.py  threadedRender.py
src/darshak/: __init__.py  __main__.py
